src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/UnexpectedPluginLocation/InvalidUnexpectedPluginLocation.php
<?php

namespace Invalid\UnexpectedPluginLocation;

use Claroline\CoreBundle\Plugin\ClarolineTool;

/**
 * Invalid because tools must be located in the "plugin/tool" directory.
 */
class InvalidUnexpectedPluginLocation extends ClarolineTool
{
}